[package]
name = "brk_error"
description = "Errors used throughout BRK"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
bitcoin = ["dep:bitcoin"]
corepc = ["dep:corepc-jsonrpc"]
fjall = ["dep:fjall"]
jiff = ["dep:jiff"]
ureq = ["dep:ureq"]
pco = ["dep:pco"]
serde_json = ["dep:serde_json"]
tokio = ["dep:tokio"]
vecdb = ["dep:vecdb"]

[dependencies]
bitcoin = { workspace = true, optional = true }
corepc-jsonrpc = { workspace = true, optional = true }
fjall = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
pco = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = "2.0"
tokio = { workspace = true, optional = true }
vecdb = { workspace = true, optional = true }
