[package]
name = "brk_exit"
description = "An exit blocker built on top of ctrlc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brk_logger = { workspace = true }
ctrlc = { version = "3.4.7", features = ["termination"] }
log = { workspace = true }
