[package]
name = "brk_fetcher"
description = "A Bitcoin price fetcher"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
brk_error = { workspace = true }
brk_logger = { workspace = true }
brk_types = { workspace = true }
log = { workspace = true }
minreq = { workspace = true }
serde_json = { workspace = true }
