[package]
name = "brk_fetcher"
description = "A Bitcoin price fetcher"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
brk_error = { workspace = true, features = ["minreq", "serde_json"] }
brk_logger = { workspace = true }
brk_types = { workspace = true }
tracing = { workspace = true }
minreq = { workspace = true }
serde_json = { workspace = true }
