[package]
name = "brk_grouper"
description = "Groups used throughout BRK"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
brk_structs = { workspace = true }
brk_traversable = { workspace = true }
vecdb = { workspace = true }
