[package]
name = "brk_indexer"
description = "A Bitcoin indexer built on top of brk_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
brk_structs = { workspace = true }
brk_error = { workspace = true }
brk_logger = { workspace = true }
brk_parser = { workspace = true }
brk_store = { workspace = true }
brk_vecs = { workspace = true }
brk_vecs_derive = { workspace = true }
vecdb = { workspace = true }
fjall = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
