[package]
name = "brk_interface"
description = "An interface to find and format data from BRK"
license.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
build = "../../build.rs"

[dependencies]
brk_computer = { workspace = true }
brk_error = { workspace = true }
brk_indexer = { workspace = true }
brk_structs = { workspace = true }
brk_vecs = { workspace = true }
derive_deref = { workspace = true }
schemars = "1.0.4"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.14.0"
tabled = "0.20.0"
