[package]
name = "brk_interface"
description = "An interface to find and format data from BRK"
license.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
brk_computer = { workspace = true }
brk_error = { workspace = true }
brk_indexer = { workspace = true }
brk_parser = { workspace = true }
brk_structs = { workspace = true }
brk_traversable = { workspace = true }
derive_deref = { workspace = true }
# quickmatch = { path = "../../../quickmatch" }
quickmatch = "0.1.8"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
vecdb = { workspace = true }
