[package]
name = "brk_logger"
description = "A thin wrapper around env_logger"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "../../build.rs"

[dependencies]
env_logger = "0.11.8"
jiff = { workspace = true }
log = { workspace = true }
owo-colors = "4.2.2"
