[package]
name = "brk_logger"
description = "A thin wrapper around tracing with size-based log rotation"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
jiff = { workspace = true }
logroller = "0.1"
owo-colors = "4.2.3"
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std"] }
